# VoidTerm-source

./: .gitignore  BUILDING.md  CHANGELOG.md  LICENSE  README.md  build.gradle  gradlew  gradlew.bat  local.properties.example  settings.gradle
.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/scripts/: bootstrap.sh  install_common_tools.sh  setup_kali_environment.sh
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/crypto/: md5.c  md5.h  pgp_verify.c  pgp_verify.h  sha256.c  sha256.h
app/src/main/cpp/fs/: fs_utils.c  fs_utils.h  path_resolver.c  path_resolver.h  permission_helper.c  permission_helper.h
app/src/main/cpp/include/: voidterm.h
app/src/main/cpp/jni/: fs_jni.cpp  jni_bridge.cpp  package_jni.cpp  terminal_jni.cpp
app/src/main/cpp/net/: http_client.c  http_client.h  progress_tracker.c  progress_tracker.h
app/src/main/cpp/package/: apt_wrapper.c  apt_wrapper.h  dpkg_helper.c  dpkg_helper.h  repo_manager.c  repo_manager.h
app/src/main/cpp/shell/: alias_engine.c  alias_engine.h  command_tokenizer.c  command_tokenizer.h  env_manager.c  env_manager.h  history_manager.c  history_manager.h  shell_quote.c  shell_quote.h
app/src/main/cpp/terminal/: escape_parser.c  escape_parser.h  io_buffer.c  io_buffer.h  process_runner.c  process_runner.h  pty_manager.c  pty_manager.h  vt100.c  vt100.h
app/src/main/java/com/asotn/voidterm/: VoidTermApp.java
app/src/main/java/com/asotn/voidterm/engine/: NativeTerminal.java  PackageEngine.java
app/src/main/java/com/asotn/voidterm/service/: BootReceiver.java  BootstrapService.java  PackageService.java
app/src/main/java/com/asotn/voidterm/terminal/: CommandProcessor.java  SessionManager.java  TabCompletionEngine.java  TerminalSession.java
app/src/main/java/com/asotn/voidterm/ui/: AboutActivity.java  PackageInstallActivity.java  SettingsActivity.java  ShellKeyboardView.java  TerminalActivity.java  TerminalView.java
app/src/main/java/com/asotn/voidterm/utils/: AppPreferences.java  (+5 more)
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_about.xml  activity_terminal.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml  preferences.xml
fastlane/metadata/android/en-US/: full_description.txt
keystore/: voidterm-debug.keystore
metadata/com.asotn.voidterm/: en-US.yml
